# jira-terminal

./: .gitignore  .travis.yml  1  CNAME  Cargo.toml  README.md  artifacts.json  build-release  changelog.rss  index.html  jira-terminal-installer.ps1.txt  jira-terminal-installer.sh.txt  oranda.json
.github/: FUNDING.yml
.github/workflows/: build.yml  publish-crates.yml  release.yml  web.yml
artifacts/: index.html
changelog/: index.html
changelog/v1.0.0/: index.html
changelog/v1.0.1/: index.html
changelog/v1.1.0/: index.html
changelog/v1.2.0/: index.html
changelog/v1.3.0/: index.html
changelog/v1.4.0/: index.html
changelog/v1.5.0/: index.html
changelog/v1.6.0/: index.html
changelog/v2.0.0/: index.html
changelog/v2.1.0/: index.html
changelog/v2.2.0/: index.html
changelog/v2.3.0/: index.html
changelog/v2.4.0/: index.html
changelog/v2.4.1/: index.html
changelog/v2.5.0/: index.html
funding/: index.html
src/: main.rs  prelude.rs
src/api/: mod.rs  request.rs
src/config/: cache.rs  mod.rs
src/jira/: api.rs  assign.rs  comments.rs  details.rs  fields.rs  lists.rs  logout.rs  mod.rs  new_issue.rs  transitions.rs  update.rs  utils.rs
src/subcommands/: alias.rs  assign.rs  autocompletion.rs  comments.rs  config.rs  detail.rs  fields.rs  list.rs  logout.rs  mod.rs  new_subcommand.rs  transition.rs  update.rs
wix/: main.wxs
