[package]
name = "jira-terminal"
version = "0.1.0"
authors = ["Amrit Ghimire <iamritghimire@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
home = "0.5.3"
json = "0.12.4"
ureq = "2.1.0"
base64 = "0.13.0"
