[package]
name = "jira-terminal"
version = "1.0.0"
authors = ["Amrit Ghimire <iamritghimire@gmail.com>"]
edition = "2018"
description = "This is a command line application that can be used as a personal productivity tool for interacting with JIRA"
readme = "README.md"
homepage = "https://github.com/amritghimire/jira-terminal"
repository = "https://github.com/amritghimire/jira-terminal"
keywords = ["jira","terminal","command line"]
license = "AGPL-3.0-only"
categories = ["command-line-utilities"]

[dependencies]
home = "0.5.3"
json = "0.12.4"
ureq = "2.1.0"
base64 = "0.13.0"
clap = "2.33.3"
chrono = "0.4.19"
regex = "1.5.4"
